<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_recommended_job"
        android:enabled="true"
        android:title="@string/recommended_job"
        android:icon="@drawable/jobsearch"
        />

    <item
        android:id="@+id/view_workers_interested_jobs"
        android:enabled="true"
        android:title="@string/interested"
        android:icon="@drawable/myinterest"
        />
    <item
        android:id="@+id/view_contractors"
        android:enabled="true"
        android:icon="@drawable/contractor"
        android:title="@string/contractors" />

    <item
        android:id="@+id/view_profile"
        android:enabled="true"
        android:title="@string/my_profile"
        android:icon="@drawable/myprofile"
        />

</menu>