<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/post_contractorjob"
        android:enabled="true"
        android:title="@string/post_job"
        android:icon="@drawable/post"
        />
    <item
        android:id="@+id/view_contractorjob"
        android:enabled="true"
        android:title="@string/view_job"
        android:icon="@drawable/contractor"

        />

    <item android:id="@+id/view_workerrequests"
        android:enabled="true"
        android:title="@string/request"
        android:icon="@drawable/requests"
        />

    <item android:id="@+id/view_myworkers"
        android:enabled="true"
        android:title="Enrolled Workers"
        android:icon="@drawable/people"/>

    <item
        android:id="@+id/view_contractorprofile"
        android:enabled="true"
        android:title="My Profile"
        android:icon="@drawable/myprofile"
        />


</menu>