<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="330dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/white"
        android:outlineSpotShadowColor="#424242"
        android:outlineAmbientShadowColor="#bdbdbd"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="105dp"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:text="@string/email_id"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/post_email"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:text="TextView"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="260dp"
            >

            <TextView
                android:id="@+id/post_start_date"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:gravity="bottom|start"
                android:text="@string/start_date"
                android:textColor="#004d40"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/post_end_date"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="top|start"
                android:text="@string/end_date"
                android:textColor="#004d40"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/contact"
                android:textColor="@color/teal_dark"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/post_contact_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_weight="5"
                android:padding="2dp"
                android:text="TextView"
                android:textColor="#3e2723"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:gravity="start"

                android:text="@string/salary2"
                android:textColor="@color/teal_dark"
                android:textSize="11dp" />

            <TextView
                android:id="@+id/post_salary"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="TextView"
                android:textColor="@color/gold1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/worker_count"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/post_worker_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:text="TextView"
                android:textColor="#e91e63"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="27dp"
                android:text="@string/address3"
                android:textColor="@color/teal_dark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/post_address"
                android:layout_width="269dp"
                android:gravity="top|center_horizontal"
                android:layout_height="34dp"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/job_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>