<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContractorPostJobs">


    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/textView100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:text="@string/enter_job_desc"

        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLayout20"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37">

        <TextView
            android:id="@+id/textView200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/enter_job_name"
            android:textColor="#E91E63"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:padding="4dp" />

        <TextView
            android:id="@+id/textView201"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="Enter Custom Job Name"
            android:textColor="#E91E63"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText70"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_job_name"
            android:inputType="textPersonName"
            android:padding="4dp" />

        <EditText
            android:id="@+id/editText71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/salary"
            android:inputType="number"
            android:padding="4dp" />

        <EditText
            android:id="@+id/editText100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/est_no_worker"
            android:inputType="number"
            android:padding="4dp" />

        <EditText
            android:id="@+id/editText72"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_job_address"
            android:inputType="textPostalAddress"
            android:maxLines="2"
            android:padding="4dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/choose_start"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#673AB7"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView73"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/choose_end"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="#673AB7"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/button30"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:background="@drawable/input_button"
        android:text="POST"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout20"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>