<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeDetailsActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="159dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alegreya_bold"
            android:padding="4dp"
            android:text="@string/change_name"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText16"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:padding="1dp"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523">


        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_bold"
            android:padding="4dp"
            android:text="Change Email"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText17"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:padding="1dp"
                android:text="@string/submit"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_bold"
            android:padding="4dp"
            android:text="@string/change_contact"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText18"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/enter_contact"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:padding="1dp"
                android:text="@string/submit"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_bold"
            android:padding="4dp"
            android:text="@string/change_city"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText19"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/enter_city"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:padding="1dp"
                android:text="@string/submit"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_bold"
            android:padding="4dp"
            android:text="Change Address"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText20"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:padding="1dp"
                android:text="@string/submit"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>